--- a/Master_Thesis.tex
+++ b/Master_Thesis.tex
@@ -317,7 +317,7 @@
               2         & Data Link            & \begin{tabular}[c]{@{}l@{}}Error free data transfer from \\ one node to another\end{tabular}                        & PPP, IEEE 802.2  \\ \midrule
               1         & Physical             & \begin{tabular}[c]{@{}l@{}}Transmission and reception in\\ physical medium.\end{tabular}                            & DSL             \\ \bottomrule
             \end{tabular}
-            \caption{OSI Model}
+            \caption{OSI model}
             \label{osi}
         \end{table}
         
@@ -341,7 +341,7 @@
         \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.55]{Gajski}
-            \caption{Domains and level of description in Gajski Y-chart}
+            \caption{Domains and levels of abstraction in Gajski Y-chart}
             \label{fig:Gajski}
         \end{figure}
         
@@ -401,7 +401,7 @@
              \begin{figure}[!htb]
                             \centering
                            \includegraphics[scale=0.45]{designgap}
-                            \caption{Hardware Software Design Gaps versus Time \cite{book}.}
+                            \caption{Hardware software design gaps Versus time \cite{book}.}
                             \label{fig:designgap}
              \end{figure}
             
@@ -472,7 +472,7 @@
          \begin{figure}[!htb]
              \centering
              \includegraphics[scale=0.55]{clb}
-             \caption{Configurable Logic block \cite{xilinx}}
+             \caption{Configurable Logic Block \cite{xilinx}}
              \label{fig:clb}
             \end{figure}
         
@@ -510,7 +510,7 @@
        \begin{figure}[!htb]
            \centering
            \includegraphics[scale=0.45]{cgra}
-           \caption{Coarse Grain Reconfigurable blocks \cite{1303110}}
+           \caption{Coarse grained reconfigurable blocks \cite{1303110}}
            \label{fig:cgra}
         \end{figure}
         
@@ -532,7 +532,7 @@
                     \begin{tabular}[c]{@{}c@{}}Network-\\ Mapped\end{tabular} & Peer processor & \begin{tabular}[c]{@{}c@{}}Configuration\\  Packets\end{tabular} & Uncoupled & High \\ \hline
                 \end{tabular}
             }
-            \caption{Coarse Grain Reconfiguration Mechanism \cite{1303110}}
+            \caption{Coarse grained reconfiguration mechanism \cite{1303110}}
             \label{cgra}
         \end{table}
         
@@ -606,7 +606,7 @@
        \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.45]{EthTx}
-            \caption{Ethernet Transmit}
+            \caption{Ethernet transmitter}
             \label{fig:EthTx}
        \end{figure}
        
@@ -619,7 +619,7 @@
             \begin{figure}[!htb]
              \centering
              \includegraphics[scale=0.45]{EthRx}
-             \caption{Ethernet Receive}
+             \caption{Ethernet receiver}
              \label{fig:EthRx}
             \end{figure}
             
@@ -678,7 +678,7 @@
                 {\bf Type}                                                    & Idle & Idle & Terminate & Data 4 & Data 3 & Data 2 & Data 1 & Data 0 \\ \hline
                 {\bf \begin{tabular}[c]{@{}c@{}}Control \\ word\end{tabular}} & 1    & 1    & 1         & 0      & 0      & 0      & 0      & 0      \\ \hline
             \end{tabular}
-            \caption{Control Word}
+            \caption{Ethernet control word}
             \label{controlword}
         \end{table}
         
@@ -691,7 +691,7 @@
           \begin{figure}[!htb]
               \centering
               \includegraphics[scale=0.35]{encoder}
-              \caption{Ethernet Encoder block}
+              \caption{Ethernet encoder block}
               \label{fig:encoder}
             \end{figure}
          
@@ -702,7 +702,7 @@
         \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.35]{decoder}
-            \caption{Ethernet Decoder block}
+            \caption{Ethernet decoder block}
             \label{fig:decoder}
         \end{figure}
         
@@ -726,7 +726,7 @@
         \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.45]{Xiotx}
-            \caption{Xio-s Transmitter}
+            \caption{Xio-s transmitter}
             \label{fig:Xiotx}
         \end{figure}
         
@@ -734,21 +734,21 @@
         \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.45]{XioRx}
-            \caption{Xio-s Receiver}
+            \caption{Xio-s receiver}
             \label{fig:XioRx}
         \end{figure}
         
       \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.45]{xiotype1}
-            \caption{Xio-s Frame format Type 1}
+            \caption{Xio-s Frame format type 1}
             \label{fig:xiotype1}
         \end{figure}
         
         \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.45]{xiotype2}
-            \caption{Xio-s Frame format Type 2}
+            \caption{Xio-s Frame format type 2}
             \label{fig:xiotype2}
         \end{figure}
         
@@ -790,7 +790,7 @@
          \begin{figure}[!htb]
              \centering
              \includegraphics[scale=0.45]{cpritx}
-             \caption{CPRI Transmitter}
+             \caption{CPRI transmitter}
              \label{fig:cpritx}
             \end{figure}
             
@@ -802,7 +802,7 @@
         \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.45]{cprirx}
-            \caption{CPRI Receiver}
+            \caption{CPRI receiver}
             \label{fig:cprirx}
         \end{figure}
         
@@ -874,7 +874,7 @@
             \begin{figure}[!htb]
                 \centering
                 \includegraphics[scale=0.5]{Systemc}
-                \caption{Layered SystemC Architecture}
+                \caption{Layered SystemC architecture}
                 \label{fig:Systemc}
             \end{figure}
             
@@ -921,7 +921,7 @@
             
       %\clearpage
        
-       \subsection{High level description of the protocol}
+       \subsection{High level description of the protocols}
           
           In general, how the reconfigurable architectures are programmed and the related work in this field is discussed in Section \ref{cgr}, wherein it explained different tools and frameworks developed for computationally intensive \gls{dsp} architectures. As coarse grain architectures are targeted for specific domains to optimize the architecture design, the synthesis tools designed for protocol processing are discussed in the next section.  
           
@@ -993,7 +993,7 @@
               \begin{figure}[!htb]
                   \centering
                   \includegraphics[scale=0.4]{antlr}
-                  \caption{Antlr : Input, Grammar and Parsetree}
+                  \caption{Antlr : Input, Grammar and Parse-tree}
                   \label{fig:antlr}
                 \end{figure}
             
@@ -1016,7 +1016,7 @@
         \vspace{1cm}
         \thispagestyle{plain}
             
-         The three protocols discussed in the background are compared to highlight the common functions shared between them. The reconfigurable architecture called Freyja is explained in detail in the next section, and then a language description is developed to define the Freyja architecture which maps different protocol operators and their interconnections. The high level description accounts for different operator instantiation, transaction routing, constants in memory and error handling. Each of these is explained in detail in this chapter.
+         The three protocols discussed in the section \ref{protocols} are compared to highlight the common functions shared between them. The reconfigurable architecture called Freyja is explained in detail in the next section, and then a language description is developed to define the Freyja architecture and their operators interconnection. The high level description accounts for different operator instantiation, transaction routing, constants in memory and error handling. Each of these is explained in detail in this chapter.
             
             
         \subsection{Comparison of the protocols} \label{protocol}
@@ -1096,7 +1096,7 @@
        \begin{figure}[!htb]
            \centering
            \includegraphics[scale=0.5]{switchwrapper}
-           \caption{Freyja Switch Wrapper}
+           \caption{Freyja Switch wrapper}
            \label{fig:switchwrapper}
        \end{figure}
        
@@ -1110,7 +1110,7 @@
        \begin{figure}[!htb]
            \centering
            \includegraphics[scale=0.5]{Overallarchitecture}
-           \caption{Freyja Architecture for 4 operators}
+           \caption{Freyja architecture for 4 operators}
            \label{fig:Overallarchitecture}
        \end{figure}    
        
@@ -1148,7 +1148,7 @@
          \begin{figure}[!htb]
              \centering
              \includegraphics[scale=0.5]{CRC}
-             \caption{CRC operator in Freyja Architecture}
+             \caption{CRC operator in Freyja architecture}
              \label{fig:CRC}
             \end{figure}
             
@@ -1175,7 +1175,7 @@
 <@\textcolor{red}{errorid} @>: 02, 03;
 } 
          \end{lstlisting}
-         \caption{Freyja Operator Instantiation}
+         \caption{Freyja Operator instantiation}
          \end{figure}
          
          
@@ -1207,10 +1207,10 @@
         
          \begin{lstlisting}
 <@\textcolor{blue}{memory} @>{
-<@\textcolor{red}{crc\_add} @>   :00 to 08;
-<@\textcolor{red}{crc\_check} @> :00 to 07, 09;
-<@\textcolor{red}{scram} @>     :00 to 07: 
-<@\textcolor{red}{descram} @>   :00 to 07;
+<@\textcolor{red}{crc\_add} @>   : 00 to 08;
+<@\textcolor{red}{crc\_check} @> : 00 to 07, 09;
+<@\textcolor{red}{scram} @>     : 00 to 07: 
+<@\textcolor{red}{descram} @>   : 00 to 07;
 } 
         \end{lstlisting}
         \caption{Freyja Memory content definition}
@@ -1331,7 +1331,7 @@
                 }             
             }    
             \end{lstlisting}
-            \caption{Freyja CRC operator Control Block code segment.} 
+            \caption{Freyja CRC operator control block code segment.} 
         \end{figure}
         
         In the above code, the CRC operator's control block initially checks for the protocol and then for the type of the operator. As illustrated in Fig.~\ref{fig:CRC}, the CRC operator multiplexes two operations. The \textit{crc\_add} and \textit{crc\_check} operators share the control block, the common memory and, hardware for CRC computation. The \textit{crc\_add} need extra logic to append FCS value to the data payload and \textit{crc\_check} requires extra logic to compare the computed and received FCS value.\\ 
@@ -1358,7 +1358,7 @@
             const  int pre_sfd_del_2_crc_check=1;
             const  int crc_check_2_proc=0;             
             \end{lstlisting}
-            \caption{Freyja Reconfiguration constants.} 
+            \caption{Freyja reconfiguration constants.} 
         \end{figure}
         
         The constants are formed using a simple syntax as below \\
@@ -1450,7 +1450,7 @@
             \begin{figure}[!htb]
                 \centering
                 \includegraphics[scale=0.45]{testsystem}
-                \caption{Complete Test System(*Multiport interconnections not shown)}
+                \caption{Complete test system(*multiport interconnections not shown)}
                 \label{fig:testsystem}
             \end{figure}
             
@@ -1461,7 +1461,7 @@
         \begin{figure}[!htb]
             \centering
             \includegraphics[scale=0.5]{header}
-            \caption{FBI Interconnect}
+            \caption{FBI interconnect}
             \label{fig:header}
         \end{figure}
         
